[gd_scene load_steps=15 format=3 uid="uid://t41phsm2wrag"]

[ext_resource type="Script" path="res://Scenes/Home/home_screen.gd" id="1_ajl7f"]
[ext_resource type="Texture2D" uid="uid://cmoadextlwr4x" path="res://Scenes/Home/Home.png" id="1_y2i7d"]
[ext_resource type="Script" path="res://Scenes/Home/mainmenubutton.gd" id="3_ort1d"]
[ext_resource type="Texture2D" uid="uid://damghc5o54cr8" path="res://Scenes/Building/Fantasy/Castle/Castle.png" id="4_s7oxe"]
[ext_resource type="Texture2D" uid="uid://csudvx0jujwbu" path="res://Scenes/Building/Sci-fi/Castle/Castle2.png" id="5_j6q11"]
[ext_resource type="Script" path="res://Scenes/Home/main_circle.gd" id="6_2ec54"]
[ext_resource type="Script" path="res://Scenes/Home/style.gd" id="6_c6w5i"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ab77t"]
texture = ExtResource("1_y2i7d")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ti8sy"]

[sub_resource type="SphereMesh" id="SphereMesh_rpfpx"]
material = SubResource("ShaderMaterial_ti8sy")
radius = 115.0
height = 200.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vwcre"]

[sub_resource type="SphereMesh" id="SphereMesh_etjtr"]
material = SubResource("ShaderMaterial_vwcre")
radius = 115.0
height = 200.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ha3ui"]

[sub_resource type="SphereMesh" id="SphereMesh_410l8"]
material = SubResource("ShaderMaterial_ha3ui")
radius = 105.0
height = 130.0

[node name="Home Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1920.0
offset_top = -1000.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ajl7f")

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ab77t")

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 1688.0
offset_top = 1557.0
offset_right = 1921.0
offset_bottom = 1762.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Start"
flat = true
script = ExtResource("3_ort1d")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Start"]
visible = false
self_modulate = Color(1, 1, 1, 0.294118)
position = Vector2(119, 105)
mesh = SubResource("SphereMesh_rpfpx")

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 1145.0
offset_top = 1425.0
offset_right = 1382.0
offset_bottom = 1628.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Exit"
flat = true
script = ExtResource("3_ort1d")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Exit"]
visible = false
self_modulate = Color(1, 1, 1, 0.294118)
position = Vector2(116, 102)
mesh = SubResource("SphereMesh_etjtr")

[node name="Style" type="Button" parent="."]
layout_mode = 0
offset_left = 878.0
offset_top = 1083.0
offset_right = 1115.0
offset_bottom = 1286.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Style"
flat = true
script = ExtResource("3_ort1d")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Style"]
visible = false
self_modulate = Color(1, 1, 1, 0.294118)
position = Vector2(116, 102)
mesh = SubResource("SphereMesh_410l8")

[node name="MainCircle" type="Control" parent="Style" groups=["MainCircle"]]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 223.5
offset_top = -300.5
offset_right = 581.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_2ec54")

[node name="Fantasy" type="TextureButton" parent="Style/MainCircle" groups=["Style"]]
layout_mode = 0
offset_right = 716.0
offset_bottom = 630.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("4_s7oxe")
texture_pressed = ExtResource("4_s7oxe")
texture_hover = ExtResource("4_s7oxe")
texture_disabled = ExtResource("4_s7oxe")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_c6w5i")

[node name="Sci-fi" type="TextureButton" parent="Style/MainCircle" groups=["Style"]]
layout_mode = 0
offset_left = 179.0
offset_right = 895.0
offset_bottom = 630.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("5_j6q11")
texture_pressed = ExtResource("5_j6q11")
texture_hover = ExtResource("5_j6q11")
texture_disabled = ExtResource("5_j6q11")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_c6w5i")

[node name="MT3" type="TextureButton" parent="Style/MainCircle" groups=["Style"]]
visible = false
layout_mode = 0
offset_left = 179.0
offset_top = 157.5
offset_right = 895.0
offset_bottom = 787.5
scale = Vector2(0.25, 0.25)
disabled = true
texture_normal = ExtResource("4_s7oxe")
texture_pressed = ExtResource("4_s7oxe")
texture_hover = ExtResource("4_s7oxe")
texture_disabled = ExtResource("4_s7oxe")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_c6w5i")

[node name="MT4" type="TextureButton" parent="Style/MainCircle" groups=["Style"]]
visible = false
layout_mode = 0
offset_top = 157.5
offset_right = 716.0
offset_bottom = 787.5
scale = Vector2(0.25, 0.25)
disabled = true
texture_normal = ExtResource("4_s7oxe")
texture_pressed = ExtResource("4_s7oxe")
texture_hover = ExtResource("4_s7oxe")
texture_disabled = ExtResource("4_s7oxe")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_c6w5i")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(0.5, 0.5)

[connection signal="mouse_entered" from="Start" to="Start" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Start" to="Start" method="_on_mouse_exited"]
[connection signal="pressed" from="Start" to="Start" method="_on_pressed"]
[connection signal="mouse_entered" from="Exit" to="Exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Exit" to="Exit" method="_on_mouse_exited"]
[connection signal="pressed" from="Exit" to="Exit" method="_on_pressed"]
[connection signal="mouse_entered" from="Style" to="Style" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Style" to="Style" method="_on_mouse_exited"]
[connection signal="pressed" from="Style" to="Style/MainCircle" method="_on_pressed"]
[connection signal="pressed" from="Style/MainCircle/Fantasy" to="Style/MainCircle/Fantasy" method="_on_pressed"]
[connection signal="pressed" from="Style/MainCircle/Sci-fi" to="Style/MainCircle/Sci-fi" method="_on_pressed"]
[connection signal="pressed" from="Style/MainCircle/MT3" to="Style/MainCircle/MT3" method="_on_pressed"]
[connection signal="pressed" from="Style/MainCircle/MT4" to="Style/MainCircle/MT4" method="_on_pressed"]
